<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.fpsak.nare</groupId>
	<artifactId>fpsak-nare</artifactId>
	<version>${sha1}</version>
	<packaging>pom</packaging>
	<name>FPSAK NARE ::</name>
	<description>NARE - Not A Rule Engine</description>
	<url>https://github.com/navikt/fp-nare</url>

	<scm>
		<developerConnection>scm:git:git@github.com:navikt/fp-nare.git</developerConnection>
		<connection>scm:git:git@github.com:navikt/fp-nare.git</connection>
		<url>https://github.com/navikt/fp-nare</url>
	</scm>

	<organization>
		<name>no.nav</name>
		<url>https://github.com/navikt</url>
	</organization>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<organization>NAV (Arbeids- og velferdsdirektoratet) - The Norwegian Labour and Welfare Administration
			</organization>
			<organizationUrl>https://www.nav.no</organizationUrl>
		</developer>
	</developers>
	<modules>
		<module>core</module>
	</modules>

	<properties>
                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<sha1>2.1.0-SNAPSHOT</sha1>
		<java.version>11</java.version>
                <jupiter.version>5.5.2</jupiter.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<additionalparam>-Xdoclint:none</additionalparam>
		<jackson-datatype.version>2.10.2</jackson-datatype.version>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>navit</sonar.organization>
               <sonar.projectKey>navikt_fp-nare</sonar.projectKey>
	</properties>

	<dependencyManagement>
	    <dependencies>
	      <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.vintage</groupId>
                <artifactId>junit-vintage-engine</artifactId>
                <version>${jupiter.version}</version>
                <scope>test</scope>
            </dependency>
	    <dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.14.0</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson-datatype.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.szc.thirdparty.nl.jworks.markdown_to_asciidoc</groupId>
				<artifactId>markdown_to_asciidoc</artifactId>
				<!-- Keep in sync with markup-document-builder's dependency -->
				<version>1.0</version>
			</dependency>
			<dependency>
				<!-- for å bygge markup for sysdoc -->
				<groupId>io.github.swagger2markup</groupId>
				<artifactId>markup-document-builder</artifactId>
				<version>1.1.2</version>
				<exclusions>
					<exclusion>
						<groupId>nl.jworks.markdown_to_asciidoc</groupId>
						<artifactId>markdown_to_asciidoc</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.5</version>
					<executions>
						<execution>
						    <goals>
						      <goal>prepare-agent</goal>
						    </goals>
						</execution>
					</executions>
			    </plugin>
					
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>UTF-8</encoding>
						<release>${java.version}</release>
						<compilerArgs>
							<arg>-XDcompilePolicy=simple</arg>
							<arg>-Xplugin:ErrorProne</arg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>com.google.errorprone</groupId>
								<artifactId>error_prone_core</artifactId>
								<version>2.3.4</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>1.4.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
                 <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.1.0</version>
                </plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.7.0.1746</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>bom</flattenMode>
                    <flattenedPomFilename>.flattened</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
			      <groupId>org.jacoco</groupId>
			      <artifactId>jacoco-maven-plugin</artifactId>
			      <executions>
				<execution>
				  <id>report</id>
				  <goals>
				    <goal>report-aggregate</goal>
				  </goals>
				  <phase>verify</phase>
				</execution>
			      </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>failsafe-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>failsafe-verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
				<id>github</id>
				<name>Github navikt Maven Packages</name>
				<url>https://maven.pkg.github.com/navikt/fp-nare/</url>
		</repository>
	</distributionManagement>
</project>

